# rust-actix-web-playground

./: .gitignore  Cargo.toml  LICENSE  README.md
backend/: .gitignore
backend/graphql/: Cargo.toml
backend/graphql/src/: main.rs
backend/hybrid/: Cargo.toml
backend/rest/: Cargo.toml
backend/rest/src/: main.rs
backend/rest/src/handlers/: mod.rs
backend/shared/: Cargo.toml
backend/shared/src/: error.rs  lib.rs
backend/shared/src/auth/: auth_service.rs  current_user.rs  jwt_service.rs  middleware.rs  mod.rs  permission.rs  role.rs
backend/shared/src/database/: apply_migration.rs  mod.rs
backend/shared/src/database/migrations/: 001_create_users.down.sql  001_create_users.up.sql  002_create_roles.up.sql  003_create_permissions.up.sql  004_create_user_roles.up.sql  005_create_role_permissions.up.sql
backend/shared/src/database/models/: db_migration.rs  db_user.rs  mod.rs
backend/shared/src/database/repositories/: user_repository.rs
backend/shared/src/database/services/: user_service.rs
backend/shared/src/models/: mod.rs  mutation.rs  request.rs  user.rs
