[package]
name = "shared"
version = "0.1.0"
edition = "2024"

[dependencies]
async-graphql = { workspace = true }
async-graphql-actix-web = { workspace = true }
actix-web = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
time = { workspace = true }
sqlx = { workspace = true }
serde = { workspace = true }
chrono = { workspace = true }